@@ -37,48 +37,66 @@ Special Notes:"+{SPECIAL_NOTES_BERSERK}
 		damage=7
 		number=4
 		[animation]
-			hits=no
+		[if] #having a ripost, first swing
+			[secondary_attack_filter]
+			[/secondary_attack_filter]
+			swing=1
 			[frame]
+				begin=-251
+				end=-250
+				image="units/dwarves/berserker.png"
+			[/frame]
+		[/if]
+		[else] #no ripost, first swing
+			swing=1
+			[frame]
+				begin=-500
+				end=-250
+				image="units/dwarves/berserker.png"
+				sound={SOUND_LIST:DWARF_DIE}
+			[/frame]
+		[/else]
+		[else] # ripost or not, not the first attack
+			[frame]
+				begin=-251
+				end=-250
+				image="units/dwarves/berserker.png"
+			[/frame]
+		[/else]
+			[frame]
+				offset=0~0.24
 				begin=-250
 				end=-150
 				image="units/dwarves/berserker.png"
 			[/frame]
 			[frame]
+				offset=0.24~0.48
 				begin=-150
 				end=-50
 				image="units/dwarves/berserker-attack1.png"
 			[/frame]
+		[if]
+			hits=no
 			[frame]
+				offset=0.48~0.6:50,0.6~0.45:50
 				begin=-50
 				end=50
 				image="units/dwarves/berserker-attack2.png"
 				sound={SOUND_LIST:MISS}
 			[/frame]
-			[frame]
-				begin=50
-				end=150
-				image="units/dwarves/berserker-attack3.png"
-			[/frame]
-		[/animation]
-		[animation]
+		[/if]
+		[else]
 			hits=yes
 			[frame]
-				begin=-250
-				end=-150
-				image="units/dwarves/berserker.png"
-			[/frame]
-			[frame]
-				begin=-150
-				end=-50
-				image="units/dwarves/berserker-attack1.png"
-			[/frame]
-			[frame]
+				offset=0.48~0.6:50,0.6~0.45:50
 				begin=-50
 				end=50
 				image="units/dwarves/berserker-attack2.png"
 				sound=axe.ogg
 			[/frame]
+		[/else]
 			[frame]
+				offset=0.45~0
 				begin=50
 				end=150
 				image="units/dwarves/berserker-attack3.png"
