@@ -30,7 +30,7 @@ void move_unit(display& disp, const gamemap& map, const std::vector<gamemap::loc
 
 ///a function to show a unit fading out. Note that this only shows the effect, it doesn't
 ///actually kill the unit.
-void unit_die(display& disp, const gamemap::location& loc, unit& u, const attack_type* attack=NULL);
+void unit_die(display& disp, const gamemap::location& loc, unit& u, const attack_type* attack=NULL, const attack_type*secondary_attack=NULL);
 
 ///a function to make the unit on tile 'a' attack the unit on tile 'b'.
 ///the 'damage' will be subtracted from the unit's hitpoints, and a die effect will be
@@ -39,7 +39,8 @@ void unit_die(display& disp, const gamemap::location& loc, unit& u, const attack
 ///playing field.
 bool unit_attack(display& disp, unit_map& units,
                  const gamemap::location& a, const gamemap::location& b, int damage,
-                 const attack_type& attack, bool update_display, int swing);
+                 const attack_type& attack, const attack_type* secondary_attack,
+		 bool update_display, int swing);
 
 }
 
