@@ -154,13 +154,14 @@ int attack_type::movement_used() const
 	return cfg_["movement_used"] == "" ? 100000 : lexical_cast_default<int>(cfg_["movement_used"]);
 }
 
-const attack_animation& attack_type::animation(const display& disp, const gamemap::location& loc,const unit* my_unit,const fighting_animation::hit_type hit,int swing_num) const
+const attack_animation& attack_type::animation(const display& disp, const gamemap::location& loc,const unit* my_unit,
+		const fighting_animation::hit_type hit,const attack_type*secondary_attack,int swing_num,int damage) const
 {
 	//select one of the matching animations at random
 	std::vector<const attack_animation*>  options;
 	int max_val = -1;
 	for(std::vector<attack_animation>::const_iterator i = animation_.begin(); i != animation_.end(); ++i) {
-		int matching = i->matches(disp,loc,my_unit,hit,this,swing_num);
+		int matching = i->matches(disp,loc,my_unit,hit,this,secondary_attack,swing_num,damage);
 		if(matching == max_val) {
 			options.push_back(&*i);
 		} else if(matching > max_val) {
@@ -778,19 +779,6 @@ unit_type::unit_type(const config& cfg, const movement_type_map& mv_types,
 	for(config::child_list::const_iterator d = defends.begin(); d != defends.end(); ++d) {
 		defensive_animations_.push_back(defensive_animation(**d));
 	}
-	if(!cfg["image_defensive_short"].empty()) {
-		LOG_STREAM(err, config) << "unit " << id() << " uses an image_defensive_short tag, which is deprecated\n";
-		defensive_animations_.push_back(defensive_animation(unit_frame(cfg["image_defensive_short"],-150,150),"melee"));
-
-	}
-	if(!cfg["image_defensive_long"].empty()) {
-		LOG_STREAM(err, config) << "unit " << id() << " uses an image_defensive_long tag, which is deprecated\n";
-		defensive_animations_.push_back(defensive_animation(unit_frame(cfg["image_defensive_long"],-150,150),"ranged"));
-	}
-	if(!cfg["image_defensive"].empty()) {
-		LOG_STREAM(err, config) << "unit " << id() << " uses an image_defensive tag, which is deprecated\n";
-		defensive_animations_.push_back(defensive_animation(unit_frame(cfg["image_defensive"],-150,150)));
-	}
 	if(defensive_animations_.empty()) {
 		defensive_animations_.push_back(defensive_animation(unit_frame(image(),-150,150)));
 		// always have a defensive animation
@@ -829,10 +817,6 @@ unit_type::unit_type(const config& cfg, const movement_type_map& mv_types,
 	const config::child_list& movement_anims = expanded_cfg.get_children("movement_anim");
 	for(config::child_list::const_iterator movement_anim = movement_anims.begin(); movement_anim != movement_anims.end(); ++movement_anim) {
 		movement_animations_.push_back(movement_animation(**movement_anim));
-	}
-	if(!cfg["image_moving"].empty()) {
-		LOG_STREAM(err, config) << "unit " << id() << " uses an image_moving tag, which is deprecated\n";
-		movement_animations_.push_back(movement_animation(unit_frame(cfg["image_moving"],0,150)));
 	}
 	if(movement_animations_.empty()) {
 		movement_animations_.push_back(movement_animation(unit_frame(image(),0,150)));
