@@ -44,6 +44,10 @@ Version 1.3-svn:
    * correct handling of UTF8 filenames under windows
    * fighting animations can now be filtered on swing number
    * add progressive paramteters, allow to specify a value that will move
+   * fighting animations can now be filtered by damage done
+   * fighting animations can now be filtered by attack filter on attacker's
+   * fighting animations can now be filtered by attack filter on defender's
+   attack
    continuously in an animation
    * alpha blending is our first progressive parameter
    * new parameter in frames, offset. It allows to specify the position
